# switcher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: example_feature.json
src/: cli.rs  config.rs  git.rs  main.rs
src/commands/: all.rs  help.rs  mod.rs  projects.rs  types.rs  version.rs
src/core/: cli.rs  config.rs  git.rs  mod.rs
