[package]
name = "switcher"
description = "Multi git repositories project organizer"
homepage = "https://github.com/omarahm3/switcher"
repository = "https://github.com/omarahm3/switcher"
readme = "README.md"
license = "MIT"
keywords = ["microservices", "git", "multi-projects"]
version = "0.0.3-alpha"
authors = ["Omar Ahmed <me@mrg.sh>"]
edition = "2021"
rust-version ="1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
